--- a/poster.css
+++ b/poster.css
@@ -60,9 +60,14 @@ b {
   }
   main > * {
     flex-grow: 1;
-    margin: 0.5rem;
-    max-width: 30rem;
-    min-width: 22.5rem;
+    margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 0.5rem;
+	margin-top: 0.5rem;
+    max-width: 24rem;
+    min-width: 24rem;
+	min-height: 20rem;
+	max-height: 20rem;
     width: 24%;
     width: calc(100% / 4 - 1rem);
   }
